--- a/package.json
+++ b/package.json
@@ -9,32 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@mui/styled-engine-sc": "^5.14.8",
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@types/styled-components": "^5.1.27",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
     "firebase": "^10.5.0",
-    "next": "13.4.19",
+    "next": "^14.2.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.7",
     "styled-components": "^5.3.11",
-    "styled-reset": "^4.5.1",
-    "swiper": "^10.2.0",
-    "typescript": "5.2.2"
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/node": "20.6.0",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "@types/styled-components": "^5.1.27",
     "babel-plugin-styled-components": "^2.1.4",
+    "eslint": "^9.27.0",
+    "eslint-config-next": "^15.3.2",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "styled-reset": "^4.5.1",
+    "typescript": "5.2.2"
   }
 }
